[gd_scene load_steps=129 format=2]

[ext_resource path="res://intro.gd" type="Script" id=1]
[ext_resource path="res://ui/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://anim/1t-fury-woman0000.png" type="Texture" id=3]
[ext_resource path="res://anim/1t-fury-woman0001.png" type="Texture" id=4]
[ext_resource path="res://anim/1t-fury-woman0002.png" type="Texture" id=5]
[ext_resource path="res://anim/1t-fury-woman0003.png" type="Texture" id=6]
[ext_resource path="res://anim/1t-fury-woman0004.png" type="Texture" id=7]
[ext_resource path="res://anim/1t-fury-woman0005.png" type="Texture" id=8]
[ext_resource path="res://anim/1t-fury-woman0006.png" type="Texture" id=9]
[ext_resource path="res://anim/1t-fury-woman0007.png" type="Texture" id=10]
[ext_resource path="res://anim/1t-fury-woman0008.png" type="Texture" id=11]
[ext_resource path="res://anim/1t-fury-woman0009.png" type="Texture" id=12]
[ext_resource path="res://anim/1t-fury-woman0010.png" type="Texture" id=13]
[ext_resource path="res://anim/1t-fury-woman0011.png" type="Texture" id=14]
[ext_resource path="res://anim/1t-fury-woman0012.png" type="Texture" id=15]
[ext_resource path="res://anim/1t-fury-woman0013.png" type="Texture" id=16]
[ext_resource path="res://anim/1t-fury-woman0014.png" type="Texture" id=17]
[ext_resource path="res://anim/1t-fury-woman0015.png" type="Texture" id=18]
[ext_resource path="res://anim/1t-fury-woman0016.png" type="Texture" id=19]
[ext_resource path="res://anim/1t-fury-woman0017.png" type="Texture" id=20]
[ext_resource path="res://anim/1t-fury-woman0018.png" type="Texture" id=21]
[ext_resource path="res://anim/1t-fury-woman0019.png" type="Texture" id=22]
[ext_resource path="res://anim/1t-fury-woman0020.png" type="Texture" id=23]
[ext_resource path="res://anim/1t-fury-woman0021.png" type="Texture" id=24]
[ext_resource path="res://anim/1t-fury-woman0022.png" type="Texture" id=25]
[ext_resource path="res://anim/1t-fury-woman0023.png" type="Texture" id=26]
[ext_resource path="res://anim/1t-fury-woman0024.png" type="Texture" id=27]
[ext_resource path="res://anim/1t-fury-woman0025.png" type="Texture" id=28]
[ext_resource path="res://anim/1t-fury-woman0026.png" type="Texture" id=29]
[ext_resource path="res://anim/1t-fury-woman0027.png" type="Texture" id=30]
[ext_resource path="res://anim/1t-fury-woman0028.png" type="Texture" id=31]
[ext_resource path="res://anim/1t-fury-woman0029.png" type="Texture" id=32]
[ext_resource path="res://anim/1t-fury-woman0030.png" type="Texture" id=33]
[ext_resource path="res://anim/1t-fury-woman0031.png" type="Texture" id=34]
[ext_resource path="res://anim/1t-fury-woman0032.png" type="Texture" id=35]
[ext_resource path="res://anim/1t-fury-woman0033.png" type="Texture" id=36]
[ext_resource path="res://anim/1t-fury-man0000.png" type="Texture" id=37]
[ext_resource path="res://anim/1t-fury-man0001.png" type="Texture" id=38]
[ext_resource path="res://anim/1t-fury-man0002.png" type="Texture" id=39]
[ext_resource path="res://anim/1t-fury-man0003.png" type="Texture" id=40]
[ext_resource path="res://anim/1t-fury-man0004.png" type="Texture" id=41]
[ext_resource path="res://anim/1t-fury-man0005.png" type="Texture" id=42]
[ext_resource path="res://anim/1t-fury-man0006.png" type="Texture" id=43]
[ext_resource path="res://anim/1t-fury-man0007.png" type="Texture" id=44]
[ext_resource path="res://anim/1t-fury-man0008.png" type="Texture" id=45]
[ext_resource path="res://anim/1t-fury-man0009.png" type="Texture" id=46]
[ext_resource path="res://anim/1t-fury-man0010.png" type="Texture" id=47]
[ext_resource path="res://anim/1t-fury-man0011.png" type="Texture" id=48]
[ext_resource path="res://anim/1t-fury-man0012.png" type="Texture" id=49]
[ext_resource path="res://anim/1t-fury-man0013.png" type="Texture" id=50]
[ext_resource path="res://anim/1t-fury-man0014.png" type="Texture" id=51]
[ext_resource path="res://anim/1t-fury-man0015.png" type="Texture" id=52]
[ext_resource path="res://anim/1t-fury-man0016.png" type="Texture" id=53]
[ext_resource path="res://anim/1t-fury-man0017.png" type="Texture" id=54]
[ext_resource path="res://anim/1t-fury-man0018.png" type="Texture" id=55]
[ext_resource path="res://anim/1t-fury-man0019.png" type="Texture" id=56]
[ext_resource path="res://anim/1t-fury-man0020.png" type="Texture" id=57]
[ext_resource path="res://anim/1t-fury-man0021.png" type="Texture" id=58]
[ext_resource path="res://anim/1t-fury-man0022.png" type="Texture" id=59]
[ext_resource path="res://anim/1t-fury-man0023.png" type="Texture" id=60]
[ext_resource path="res://anim/1t-fury-man0024.png" type="Texture" id=61]
[ext_resource path="res://anim/1t-fury-man0025.png" type="Texture" id=62]
[ext_resource path="res://anim/1t-fury-man0026.png" type="Texture" id=63]
[ext_resource path="res://anim/1t-fury-man0027.png" type="Texture" id=64]
[ext_resource path="res://anim/1t-fury-man0028.png" type="Texture" id=65]
[ext_resource path="res://anim/1t-fury-man0029.png" type="Texture" id=66]
[ext_resource path="res://anim/1t-fury-man0030.png" type="Texture" id=67]
[ext_resource path="res://anim/1t-fury-man0031.png" type="Texture" id=68]
[ext_resource path="res://anim/1t-fury-man0032.png" type="Texture" id=69]
[ext_resource path="res://anim/1t-fury-man0033.png" type="Texture" id=70]
[ext_resource path="res://anim/1t-bear-woman0000.png" type="Texture" id=71]
[ext_resource path="res://anim/1t-bear-woman0001.png" type="Texture" id=72]
[ext_resource path="res://anim/1t-bear-woman0002.png" type="Texture" id=73]
[ext_resource path="res://anim/1t-bear-woman0003.png" type="Texture" id=74]
[ext_resource path="res://anim/1t-bear-woman0004.png" type="Texture" id=75]
[ext_resource path="res://anim/1t-bear-woman0005.png" type="Texture" id=76]
[ext_resource path="res://anim/1t-bear-woman0006.png" type="Texture" id=77]
[ext_resource path="res://anim/1t-bear-woman0007.png" type="Texture" id=78]
[ext_resource path="res://anim/1t-bear-woman0008.png" type="Texture" id=79]
[ext_resource path="res://anim/1t-bear-woman0009.png" type="Texture" id=80]
[ext_resource path="res://anim/1t-bear-woman0010.png" type="Texture" id=81]
[ext_resource path="res://anim/1t-bear-woman0011.png" type="Texture" id=82]
[ext_resource path="res://anim/1t-bear-woman0012.png" type="Texture" id=83]
[ext_resource path="res://anim/1t-bear-woman0013.png" type="Texture" id=84]
[ext_resource path="res://anim/1t-bear-woman0014.png" type="Texture" id=85]
[ext_resource path="res://anim/1t-bear-woman0015.png" type="Texture" id=86]
[ext_resource path="res://anim/1t-bear-woman0016.png" type="Texture" id=87]
[ext_resource path="res://anim/1t-bear-woman0017.png" type="Texture" id=88]
[ext_resource path="res://anim/1t-bear-woman0018.png" type="Texture" id=89]
[ext_resource path="res://anim/1t-bear-woman0019.png" type="Texture" id=90]
[ext_resource path="res://anim/1t-bear-woman0020.png" type="Texture" id=91]
[ext_resource path="res://anim/1t-bear-woman0021.png" type="Texture" id=92]
[ext_resource path="res://anim/1t-bear-man0000.png" type="Texture" id=93]
[ext_resource path="res://anim/1t-bear-man0001.png" type="Texture" id=94]
[ext_resource path="res://anim/1t-bear-man0002.png" type="Texture" id=95]
[ext_resource path="res://anim/1t-bear-man0003.png" type="Texture" id=96]
[ext_resource path="res://anim/1t-bear-man0004.png" type="Texture" id=97]
[ext_resource path="res://anim/1t-bear-man0005.png" type="Texture" id=98]
[ext_resource path="res://anim/1t-bear-man0006.png" type="Texture" id=99]
[ext_resource path="res://anim/1t-bear-man0007.png" type="Texture" id=100]
[ext_resource path="res://anim/1t-bear-man0008.png" type="Texture" id=101]
[ext_resource path="res://anim/1t-bear-man0009.png" type="Texture" id=102]
[ext_resource path="res://anim/1t-bear-man0010.png" type="Texture" id=103]
[ext_resource path="res://anim/1t-bear-man0011.png" type="Texture" id=104]
[ext_resource path="res://anim/1t-bear-man0012.png" type="Texture" id=105]
[ext_resource path="res://anim/1t-bear-man0013.png" type="Texture" id=106]
[ext_resource path="res://anim/1t-bear-man0014.png" type="Texture" id=107]
[ext_resource path="res://anim/1t-bear-man0015.png" type="Texture" id=108]
[ext_resource path="res://anim/1t-bear-man0016.png" type="Texture" id=109]
[ext_resource path="res://anim/1t-bear-man0017.png" type="Texture" id=110]
[ext_resource path="res://anim/1t-bear-man0018.png" type="Texture" id=111]
[ext_resource path="res://anim/1t-bear-man0019.png" type="Texture" id=112]
[ext_resource path="res://anim/1t-bear-man0020.png" type="Texture" id=113]
[ext_resource path="res://anim/1t-bear-man0021.png" type="Texture" id=114]
[ext_resource path="res://anim/intro-man0000.png" type="Texture" id=115]
[ext_resource path="res://anim/intro-man0001.png" type="Texture" id=116]
[ext_resource path="res://anim/intro-man0002.png" type="Texture" id=117]
[ext_resource path="res://anim/intro-man0003.png" type="Texture" id=118]
[ext_resource path="res://anim/intro-woman0000.png" type="Texture" id=119]
[ext_resource path="res://anim/intro-woman0001.png" type="Texture" id=120]
[ext_resource path="res://anim/intro-woman0002.png" type="Texture" id=121]
[ext_resource path="res://anim/intro-woman0003.png" type="Texture" id=122]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="intro" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="Anim_transition_fury_woman" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 830.828, 342.358 )
frames = SubResource( 1 )
animation = "default"

[node name="Anim_transition_fury_man" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 365.115, 327.027 )
frames = SubResource( 2 )
animation = "default"

[node name="Anim_transition_bear_woman" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 863.1, 325.855 )
frames = SubResource( 3 )
animation = "default"

[node name="Anim_transition_bear_man" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 367.1, 339.855 )
frames = SubResource( 4 )
animation = "default"

[node name="Anim_intro_man" type="AnimatedSprite" parent="."]

position = Vector2( 397.095, 326.026 )
frames = SubResource( 5 )
animation = "default"
frame = 1
playing = true

[node name="Anim_intro_woman" type="AnimatedSprite" parent="."]

position = Vector2( 856.915, 321.028 )
frames = SubResource( 6 )
animation = "default"
frame = 2
playing = true

[node name="Button_woman" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 723.0
margin_top = 96.0
margin_right = 1084.0
margin_bottom = 644.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="Button_man" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 91.0
margin_right = 542.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Mouse" ]

[connection signal="animation_finished" from="Anim_transition_fury_woman" to="." method="_on_Anim_transition_fury_woman_animation_finished"]

[connection signal="animation_finished" from="Anim_transition_bear_man" to="." method="_on_Anim_transition_bear_man_animation_finished"]

[connection signal="pressed" from="Button_woman" to="." method="_on_Button_woman_pressed"]

[connection signal="pressed" from="Button_man" to="." method="_on_Button_man_pressed"]


